--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "frow": "^3.3.2",
     "vue": "^2.5.11"
   },
   "browserslist": [
